# LangListen

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
LangListen/: CMakeLists.txt  applicationcontroller.cpp  applicationcontroller.h  audioconverter.cpp  audioconverter.h  audioplaybackcontroller.cpp  audioplaybackcontroller.h  main.cpp  qml.qrc  subtitlegenerator.cpp  subtitlegenerator.h  whisperworker.cpp  whisperworker.h
LangListen/qml/: ListeningPracticePanel.qml  main.qml
